# simple-fluent-widget

./: CALENDAR_OPTIMIZATIONS.md  CALENDAR_ULTRA_OPTIMIZATIONS.md  CODE_QUALITY_REPORT.md  COLORPICKER_OPTIMIZATIONS.md  EXAMPLES_SUMMARY.md  FILEEXPLORER_OPTIMIZATIONS.md  PROPERTY_GRID_OPTIMIZATIONS.md  README.md  README_MODERNIZED.md  TREE_OPTIMIZATIONS.md  build.py  demo_calendar_optimized.py  demo_calendar_ultra_optimized.py  demo_colorpicker_optimization.py  demo_simple_calendar.py  demo_tree_optimized.py  fix_fileexplorer.py  main.py  pyproject.toml  simple_tab_test.py  syntax_test.py  test_calendar_import.py  test_colorpicker_optimized.py  test_colorpicker_simple.py  test_fileexplorer_final.py  test_organized_structure.py  update_imports.py
.serena/: project.yml
components/: README.md  __init__.py
components/base/: __init__.py  fluent_component_interface.py  fluent_control_base.py
components/basic/: README.md  __init__.py  accordion.py  alert.py  avatar.py  badge.py  button.py  card.py  checkbox.py  combobox.py  divider.py  label.py  loading.py  pagination.py  progress.py  rating.py  segmented.py  slider.py  spinbox.py  stepper.py  switch.py  tabs.py  textbox.py  timeline.py  toggle.py  tooltip.py
core/: __init__.py  animation.py  base.py  enhanced_animations.py  enhanced_base.py  lazy_init.py  theme.py  theme_integration.py
demos/: advanced_charts_demo.py  all_advanced_components_demo.py  comprehensive_demo.py  comprehensive_new_components_demo.py  dialog_system_demo.py  menus_commands_demo.py  optimized_charts_demo.py  simple_charts_demo.py
docs/: visualization_optimization_summary.md
examples/: README.md  accordion_example.py  alert_example.py  avatar_example.py  badge_demo.py  card_demo.py  checkbox_demo.py  checkbox_radio_demo.py  combobox_demo.py  complete_demo.py  comprehensive_demo.py  demo_tabs.py  enhanced_components_demo.py  examples_index.py  label_demo.py  latest_components_demo.py  loading_demo.py  modern_charts_usage.py  new_components_demo.py  pagination_demo.py  progress_demo.py  rating_demo.py  spinbox_demo.py  switch_demo.py  timeline_demo.py
tests/: integration_test.py  performance_benchmark.py
tools/: generate_docs.py  validate_component_consistency.py
(+200 files in other folders)
