[project]
name = "simple-fluent-widget"
version = "1.0.0"
description = "Enterprise-grade Fluent UI components library for PySide6 applications"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Fluent UI Components Team" }]
keywords = ["fluent", "ui", "components", "pyside6", "qt", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Desktop Environment",
    "Environment :: X11 Applications :: Qt",
]
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.5.0",
 "psutil>=5.9.0",
 "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0", "mypy>=1.0.0"]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/your-org/simple-fluent-widget"
Documentation = "https://your-org.github.io/simple-fluent-widget"
Repository = "https://github.com/your-org/simple-fluent-widget.git"
Issues = "https://github.com/your-org/simple-fluent-widget/issues"

[project.scripts]
fluent-demo = "examples.comprehensive_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["components", "core", "examples", "tools"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
